gateway/cmd/gateway/k8s/02-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: kube-system
  name: gateway
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          # image: web3eye/gateway:latest
          image: coastlinesss/gateway:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: service-config
              mountPath: /etc/Gateway
      volumes:
        - name: service-config
          configMap:
            name: gateway-config
---
apiVersion: v1
kind: Service
metadata:
  namespace: kube-system
  name: gateway
spec:
  ports:
    - name: http
      port: 30130
      targetPort: 30130
    - name: grpc
      port: 30131
      targetPort: 30131
    - name: healthz
      port: 30132
      targetPort: 30132
  selector:
    app: gateway
