gateway/cmd/gateway/k8s/03-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  namespace: kube-system
  name: strip-gateway-prefix
spec:
  stripPrefix:
    prefixes:
      - /api/gateway

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: kube-system
  name: gateway-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares:
      kube-system-strip-gateway-prefix@kubernetescrd,
      kube-system-http-redirect-https@kubernetescrd,
      kube-system-http-redirect-https-testing@kubernetescrd,
      kube-system-common-headers@kubernetescrd

spec:
  tls:
    - hosts:
        - "*.testnet.web3eye.io"
        - testnet.web3eye.io
      secretName: testnet-web3eye-io-tls
  rules:
    - host:
      http:
        paths:
          - path: /api/gateway
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 30120
